--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Git it Done</title>
 </head>
 
@@ -24,9 +24,9 @@
         <div class="col-12 col-md-4">
             <div class="card">
                 <h3 class="card-header text-uppercase">Search By city</h3>
-                <form id="user-form" class="card-body">
-                  <label class="form-label" for="username">Pittsburgh</label>
-                  <input name="username" id="username" type="text" autofocus="true" class="form-input" />
+                <form id="city-form" class="card-body">
+                  <label class="form-label" for="cityname">Pittsburgh</label>
+                  <input name="cityname" id="cityname" type="text" autofocus="true" class="form-input" />
                   <button type="submit" class="btn">Get City</button>
                 </form>
               </div>
@@ -41,13 +41,14 @@
 
 
               <div class="col-12 col-md-8">
-                <h2 class="subtitle">Showing Repositories for: <span id="repo-search-term"></span></h2>
+                <h2 class="subtitle">Showing Repositories for: <span id="weather-search-term"></span></h2>
                 <div id="weather-container" class="list-group"></div>
               </div>
 
 
         </div>
     </main>
+    <script src="./script.js"></script>
 </body>
 
 </html>
