relatcated weather display conttainer

--- a/index.html
+++ b/index.html
@@ -37,16 +37,11 @@
                     <div id="city-container" class="list-group"></div>
                 </div>
               </div>
-
-
-
-              <div class="col-12 col-md-8">
-                <h2 class="subtitle">Showing Repositories for: <span id="weather-search-term"></span></h2>
-                <div id="weather-container" class="list-group"></div>
-              </div>
-
-
         </div>
+        <div class="col-12 col-md-8">
+            <h2 class="subtitle">Showing weather for: <span id="weather-search-term"></span></h2>
+            <div id="weather-container" class="list-group"></div>
+          </div>
     </main>
     <script src="./script.js"></script>
 </body>
