updated text in html and added local storage to js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="./style.css" />
-    <title>Git it Done</title>
+    <title>What's the weather?</title>
 </head>
 
 <body class='flex-colum nim-100-vh'>
@@ -33,7 +33,7 @@
             
               <div class="col-12 col-md-4">
                 <div class="card">
-                    <h3 class="card-header text upercase">Showing showing past serches</h3>
+                    <h3 class="card-header text upercase">Showing past serches</h3>
                     <div id="city-container" class="list-group"></div>
                 </div>
               </div>
