--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class='flex-colum nim-100-vh'>
     <header class="hero">
         <h1 class="app-title">
-            <i class="fab fa-github"></i> Weather!
+             Weather!
         </h1>
         <p>Search for the weather by city or from a list of you own making
         </p>
