--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         </div>
         <div class="col-12 col-md-8">
             <h2 class="subtitle">Showing weather for: <span id="weather-search-term"></span></h2>
-            <div id="weather-container" class="list-group"></div>
+            <div id="forecast-container" class="list-group"></div>
+            <div id='5dayWeather'></div>
           </div>
     </main>
     <script src="./script.js"></script>
