figured out other paramas for weather

--- a/index.html
+++ b/index.html
@@ -30,19 +30,33 @@
                   <button type="submit" class="btn">Get City</button>
                 </form>
               </div>
-            
-              <div class="col-12 col-md-4">
-                <div class="card">
-                    <h3 class="card-header text upercase">Showing past serches</h3>
-                    <div id="city-container" class="list-group"></div>
-                </div>
-              </div>
         </div>
         <div class="col-12 col-md-8">
             <h2 class="subtitle">Showing weather for: <span id="weather-search-term"></span></h2>
             <div id="forecast-container" class="list-group"></div>
+
+          </div>
+          <div class="col-12 col-md-4">
+            <div class="card">
+                <h3 class="card-header text upercase">Showing past searches</h3>
+                <div id="city-container" class="list-group"></div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4">
+            <h2 class="subtitle">Showing Showing 5 day forecast: <span id="weather-search-term"></span></h2>
             <div id='5dayWeather'></div>
           </div>
+          <!-- <div class="col-12 col-md-2">
+            <div id='5dayWeather'></div>
+
+          </div> -->
+
+          <!-- <div class="card">
+            <h3 class="card-header text-uppercase"> 5-Day Forecast </h3>
+            <p id="5dayWeather"> </p>
+
+        </div> -->
+
     </main>
     <script src="./script.js"></script>
 </body>
